<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@id/rl_gd_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="#ffffff">

        <ImageButton
            android:id="@id/ib_back"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@null"
            android:contentDescription="@string/IMAGE"
            android:paddingLeft="@dimen/ten_dp"
            android:paddingRight="@dimen/ten_dp"
            android:src="@drawable/ic_title_back"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="产品详情"
            android:textColor="#D6B586"
            android:textSize="20dp"/>
    </RelativeLayout>


    <WebView
        android:id="@+id/web_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:id="@id/ll_gd_bottom"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/fifty_dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@id/rl_gd_cart"
            android:layout_width="@dimen/fifty_eight_dp"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@id/tv_gd_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="@dimen/seven_dp"
                android:drawableTop="@drawable/ic_bottom_shopping_basket"
                android:includeFontPadding="false"
                android:text="@string/shopping_basket"
                android:textColor="@color/gray_aa"
                android:textSize="@dimen/ten_sp"/>

            <TextView
                android:id="@id/tv_gd_subscript"
                style="@style/tv_shopping_cart_num"
                android:layout_alignRight="@id/tv_gd_cart"
                android:layout_alignTop="@id/tv_gd_cart"
                android:visibility="visible"/>
        </RelativeLayout>

        <View
            android:layout_width="0.5dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp"
            android:background="@color/gray_light_f7f0"/>

        <LinearLayout
            android:id="@id/ll_gd_shop"
            android:layout_width="@dimen/fifty_eight_dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/seven_dp"
                android:drawableTop="@drawable/ic_bottom_shop"
                android:includeFontPadding="false"
                android:text="@string/shop"
                android:textColor="@color/gray_aa"
                android:textSize="@dimen/ten_sp"/>
        </LinearLayout>

        <View
            android:layout_width="0.5dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp"
            android:background="@color/gray_light_f7f0"/>

        <LinearLayout
            android:id="@id/ll_gd_collect"
            android:layout_width="@dimen/fifty_eight_dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@id/tv_gd_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/seven_dp"
                android:drawableTop="@drawable/ic_bottom_collect"
                android:includeFontPadding="false"
                android:text="@string/collection"
                android:textColor="@color/gray_aa"
                android:textSize="@dimen/ten_sp"/>
        </LinearLayout>

        <View
            android:layout_width="0.5dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp"
            android:background="@color/gray_light_f7f0"/>

        <Button
            android:id="@id/bt_into_basket"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@color/gray_e7"
            android:text="@string/into_the_shopping_basket"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fifteen_sp"/>

        <Button
            android:id="@id/bt_buy_now"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/selector_buy_btn_bg"
            android:text="@string/buy_now"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fifteen_sp"/>
    </LinearLayout>
</LinearLayout>