<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/v_status"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/statue_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.example.winner.yueshijia.views.MyScrollview
            android:id="@+id/sv_gd_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/ll_gd_bottom"
            android:scrollbars="none">


            <LinearLayout
                android:id="@+id/ll_gd_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v4.view.ViewPager
                        android:id="@+id/vp_goods"
                        android:layout_width="match_parent"
                        android:layout_height="453.0dip"/>


                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_gd_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:layout_marginRight="@dimen/twenty_dp"
                    android:layout_marginTop="@dimen/twenty_dp"
                    android:includeFontPadding="false"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/sixteen_sp"/>

                <include layout="@layout/layout_gd_price"/>

                <LinearLayout
                    android:id="@+id/ll_gd_promotion"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:layout_marginRight="@dimen/twenty_dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_gd_no_promotion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/ten_dp"
                        android:includeFontPadding="false"
                        android:textColor="@color/gray_light_ce"
                        android:textSize="@dimen/eleven_sp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_gd_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:layout_marginRight="@dimen/twenty_dp"
                    android:layout_marginTop="@dimen/thirty_dp"
                    android:includeFontPadding="false"
                    android:textColor="@color/gray_dark_80"
                    android:textSize="@dimen/thirteen_sp"/>


                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dip"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:layout_marginRight="@dimen/twenty_dp"
                    android:layout_marginTop="@dimen/thirty_dp"
                    android:background="@color/gray_dark_93"/>

                <TextView
                    android:clickable="true"
                    android:id="@+id/tv_gd_details"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/forty_three_dp"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:layout_marginRight="@dimen/twenty_dp"
                    android:drawableRight="@drawable/ic_right_arrow"
                    android:gravity="center_vertical"
                    android:text="商品详情"
                    android:textColor="@color/text_black"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dip"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:layout_marginRight="@dimen/twenty_dp"
                    android:background="@color/gray_d4"/>

                <TextView
                    android:id="@+id/tv_gd_evaluation"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/forty_three_dp"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:layout_marginRight="@dimen/twenty_dp"
                    android:drawableRight="@drawable/ic_right_arrow"
                    android:gravity="center_vertical"
                    android:text="商品评价"
                    android:textColor="@color/text_black"
                    android:textStyle="bold"/>

                <View
                    android:id="@+id/v_gd_logistics_top_line"
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dip"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:layout_marginRight="@dimen/twenty_dp"
                    android:background="@color/gray_d4"/>

                <TextView
                    android:id="@+id/tv_gd_logistics_text"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/forty_three_dp"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:layout_marginRight="@dimen/twenty_dp"
                    android:drawableRight="@drawable/ic_gd_down"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_black"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:id="@+id/ll_gd_logistics"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:layout_marginRight="@dimen/twenty_dp">

                    <TextView
                        android:id="@+id/tv_gd_logistics"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/twenty_three_dp"
                        android:includeFontPadding="false"
                        android:textColor="@color/gray_dark_80"
                        android:textSize="@dimen/thirteen_sp"/>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dip"
                    android:layout_marginBottom="@dimen/fifty_dp"
                    android:layout_marginLeft="@dimen/twenty_dp"
                    android:layout_marginRight="@dimen/twenty_dp"
                    android:background="@color/gray_dark_93"/>
            </LinearLayout>
        </com.example.winner.yueshijia.views.MyScrollview>

        <RelativeLayout
            android:id="@id/rl_gd_title"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_height"
            android:background="#aaffffff">

            <ImageButton
                android:id="@id/ib_back"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@null"
                android:contentDescription="@string/IMAGE"
                android:paddingLeft="@dimen/ten_dp"
                android:paddingRight="@dimen/ten_dp"
                android:src="@drawable/ic_title_back"/>

            <ImageButton
                android:id="@id/ib_share"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true"
                android:background="@null"
                android:contentDescription="@string/IMAGE"
                android:paddingLeft="@dimen/ten_dp"
                android:paddingRight="@dimen/ten_dp"
                android:src="@drawable/ic_title_share"/>
        </RelativeLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@id/ll_gd_bottom"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/fifty_dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RelativeLayout
            android:clickable="true"
            android:id="@id/rl_gd_cart"
            android:layout_width="@dimen/fifty_eight_dp"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@id/tv_gd_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="@dimen/seven_dp"
                android:drawableTop="@drawable/ic_bottom_shopping_basket"
                android:includeFontPadding="false"
                android:text="@string/shopping_basket"
                android:textColor="@color/gray_aa"
                android:textSize="@dimen/ten_sp"/>

            <TextView
                android:id="@id/tv_gd_subscript"
                style="@style/tv_shopping_cart_num"
                android:layout_alignRight="@id/tv_gd_cart"
                android:layout_alignTop="@id/tv_gd_cart"
                android:visibility="visible"/>
        </RelativeLayout>

        <View
            android:layout_width="0.5dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp"
            android:background="@color/gray_light_f7f0"/>

        <LinearLayout
            android:clickable="true"
            android:id="@id/ll_gd_shop"
            android:layout_width="@dimen/fifty_eight_dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/seven_dp"
                android:drawableTop="@drawable/ic_bottom_shop"
                android:includeFontPadding="false"
                android:text="@string/shop"
                android:textColor="@color/gray_aa"
                android:textSize="@dimen/ten_sp"/>
        </LinearLayout>

        <View
            android:layout_width="0.5dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp"
            android:background="@color/gray_light_f7f0"/>

        <LinearLayout
            android:clickable="true"
            android:id="@id/ll_gd_collect"
            android:layout_width="@dimen/fifty_eight_dp"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@id/tv_gd_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/seven_dp"
                android:drawableTop="@drawable/ic_bottom_collect"
                android:includeFontPadding="false"
                android:text="@string/collection"
                android:textColor="@color/gray_aa"
                android:textSize="@dimen/ten_sp"/>
        </LinearLayout>

        <View
            android:layout_width="0.5dip"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp"
            android:background="@color/gray_light_f7f0"/>

        <Button
            android:id="@id/bt_into_basket"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@color/gray_e7"
            android:text="@string/into_the_shopping_basket"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fifteen_sp"/>

        <Button
            android:id="@id/bt_buy_now"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/selector_buy_btn_bg"
            android:text="@string/buy_now"
            android:textColor="@android:color/white"
            android:textSize="@dimen/fifteen_sp"/>
    </LinearLayout>
</LinearLayout>